--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -512,6 +512,23 @@ b, strong {
 		box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
 		// transition: background 0.5s, color 0.5s;	
 
+		@media (max-width: 960px) {
+			height: 58px;
+			line-height: 58px;
+			@include fz(18);
+			@include ls(0.52);			
+			padding-left: 30px;
+			padding-right: 30px;					
+		}
+
+		@media (max-width: 768px) {
+			height: 44px;
+			line-height: 44px;
+			@include fz(16);					
+			padding-left: 24px;
+			padding-right: 24px;					
+		}
+
 		@media (max-width: 599px) {
 			height: 39px;
 			line-height: 39px;
