--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -5757,6 +5757,32 @@
 
 
 // mobile nav
+
+.mobile-nav-icon {
+  cursor: pointer;
+}
+
+.search-wrapper__mobile {  
+  min-width: 336px;
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: 0px 2px 9px 0px rgba(43, 47, 137, 0.15);
+  overflow: hidden;
+  visibility: hidden;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 10%);
+  padding: 12px 20px; 
+  transition: visibility 0.5s, translate 0.5s;
+  z-index: 1;
+
+  &.open {         
+    visibility: visible;    
+  }
+}
 .mobile-nav {
   background-color: #fff;
   position: fixed;
@@ -5790,6 +5816,7 @@
   }
 
   &-info {
+    position: relative;
     background-color: $primary;
     color: #FFF;
     @include fz(16);   
