--- a/src/css/style.css
+++ b/src/css/style.css
@@ -751,6 +751,10 @@ b, strong {
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 0.96px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .section-title__mobile {
   display: none;
@@ -7889,6 +7893,13 @@ b, strong {
     height: calc(100% - 20px);
   }
 }
+@media (max-width: 768px) {
+  .doctor-card {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 @media (max-width: 599px) {
   .doctor-card {
     border-radius: 6px;
@@ -8631,6 +8642,23 @@ b, strong {
   -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
           box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
   padding: 48px 60px 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media (max-width: 768px) {
+  .mfp-popup-inner .feedback-wrapper {
+    padding: 38px 50px 50px;
+  }
+}
+@media (max-width: 599px) {
+  .mfp-popup-inner .feedback-wrapper {
+    padding: 37px 12px 48px;
+  }
 }
 .mfp-popup-inner .feedback-wrapper .h3 {
   color: #FFF;
@@ -8641,10 +8669,36 @@ b, strong {
   letter-spacing: 0.06rem;
   text-transform: uppercase;
   margin-bottom: 48px;
+  margin-top: 0;
+}
+@media (max-width: 768px) {
+  .mfp-popup-inner .feedback-wrapper .h3 {
+    margin-bottom: 35px;
+  }
+}
+@media (max-width: 599px) {
+  .mfp-popup-inner .feedback-wrapper .h3 {
+    font-size: 22px;
+    font-size: 1.375rem;
+    letter-spacing: 0.04125rem;
+    margin-bottom: 24px;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
 }
 .mfp-popup-inner .feedback-wrapper .ui-field {
   width: 100%;
   margin-bottom: 40px;
+}
+@media (max-width: 599px) {
+  .mfp-popup-inner .feedback-wrapper .ui-field {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 599px) {
+  .mfp-popup-inner .feedback-wrapper .ui-btn {
+    width: 100%;
+  }
 }
 .mfp-popup button.mfp-close {
   font-size: 0;
@@ -8656,6 +8710,18 @@ b, strong {
   width: 32px;
   height: 32px;
   content: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1833_5135)'%3E%3Cpath d='M8 7.51465L24.9706 24.4852' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M8 24.4854L24.9706 7.51479' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1833_5135'%3E%3Crect width='32' height='32' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+}
+@media (max-width: 768px) {
+  .mfp-popup button.mfp-close::after {
+    top: 45px;
+    right: 50px;
+  }
+}
+@media (max-width: 599px) {
+  .mfp-popup button.mfp-close::after {
+    top: 36px;
+    right: 12px;
+  }
 }
 
 .vacancies-banner-content {
